课程等级管理添加

--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/teacher/index.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/teacher/index.html
@@ -7,8 +7,8 @@
         <li><a href="{:url('teacher/add')}">{:lang('ADMIN_TEACHER_ADD')}</a></li>
     </ul>
     <form class="well form-inline margin-top-20" method="post" action="{:url('teacher/search')}">
-        uid:
-        <input type="text" class="form-control" name="teacher_name" style="width: 110px;" value="{$teacher_name}" placeholder="请输入教师姓名">
+        教师姓名:
+        <input type="text" class="form-control" name="teacher_name" style="width: 130px;" value="{$teacher_name}" placeholder="请输入教师姓名">
         cid:
         <input type="text" class="form-control" name="cid" style="width: 110px;" value="{$cid}" placeholder="请输入课程ID">
         性别（男1/女2）：
