--- a/thinkcmf-5.0.180626/public/themes/RY/icr/head.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/head.html
@@ -37,7 +37,7 @@
         <div class="menu">
             <ul>
                 <li class="{$home_active}" onclick="{location='{:url('/')}'}">首页</li>
-                <li class="{$course_active}" onclick="{location='{:url('/icr/course')}'">课程内容</li>
+                <li class="{$course_active}" onclick="{location='{:url(\'/icr/course\')}'}">课程内容</li>
                 <li class="{$teacher_active}" onclick="{location='{:url(\'/icr/teacher\')}'}">优质师资</li>
                 <li class="{$school_active}" onclick="{location='{:url(\'/icr/school\')}'}">校区风采</li>
                 <li class="{$recruit_active}" onclick="{location='{:url(\'/icr/recruit\')}'}">人才招聘</li>
