--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/course/add.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/course/add.html
@@ -18,25 +18,13 @@
         <div class="form-group">
         <label class="col-sm-2 control-label"><span class="form-required">*</span>等级:</label>
             <select class="btn btn-primary dropdown-toggle" name="level" style="margin-left:15px;width: 100px;text-align: center">
-                <option>请选择</option>
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-                <option>6</option>
+                {$option_html}
             </select>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">描述:</label>
             <div class="col-md-6 col-sm-10">
                 <input type="text" class="form-control" name="describe" value="">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">目标（换行分隔）:</label>
-            <div class="col-md-6 col-sm-10">
-                <textarea class="form-control" name="goal" rows="5" cols="57"></textarea>
             </div>
         </div>
         <div class="form-group">
