现阶段修改

--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -1,6 +1,21 @@
 <include file="themes/RY/icr/head.html" />
 <div class="main-img">
-    <img src="/themes/RY/icr/imgs/banner1.jpg" />
+    <div class="img_list">
+
+        <a><img src="/themes/RY/icr/imgs/banner1.jpg" /></a>
+        <a><img src="/themes/RY/icr/imgs/banner2.jpg" /></a>
+        <a><img src="/themes/RY/icr/imgs/banner3.jpg" /></a>
+        <a><img src="/themes/RY/icr/imgs/banner4.jpg" /></a>
+    </div>
+    <div class="clear"></div>
+    <div class="img_an">
+        <div class="an-margin">
+            <div data-id="1"  id="an-1"></div>
+            <div data-id="2"  id="an-2"></div>
+            <div data-id="3"  id="an-3"></div>
+            <div data-id="4"  id="an-4"></div>
+        </div>
+    </div>
 </div>
 <div class="main-reserve">
     <div class="reserve">
@@ -9,7 +24,7 @@
             <input class="input_button" type="button" value="免费预约试听"/>
             <div class="agreement">
                 <i class="fa fa-square-o"></i>
-                <div>同意《 I CAN READ 用户协议》</div>
+                <a href="{:url('/icr/user-agreement')}">同意《 I CAN READ 用户协议》</a>
             </div>
         </div>
     </div>
