--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -2,10 +2,10 @@
 <div class="main-img">
     <div class="img_list">
 
-        <a><img src="/themes/RY/icr/imgs/banner1.jpg" /></a>
-        <a><img src="/themes/RY/icr/imgs/banner2.jpg" /></a>
-        <a><img src="/themes/RY/icr/imgs/banner3.jpg" /></a>
-        <a><img src="/themes/RY/icr/imgs/banner4.jpg" /></a>
+        <a href="http://www.baidu.com"><img src="/themes/RY/icr/imgs/banner1.jpg" /></a>
+        <a href="#"><img src="/themes/RY/icr/imgs/banner2.jpg" /></a>
+        <a href="#"><img src="/themes/RY/icr/imgs/banner3.jpg" /></a>
+        <a href="#"><img src="/themes/RY/icr/imgs/banner4.jpg" /></a>
     </div>
     <div class="clear"></div>
     <div class="img_an">
