--- a/thinkcmf-5.0.180626/public/themes/RY/icr/head.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/head.html
@@ -20,7 +20,7 @@
         <div class="logo"><img src="/themes/RY/icr/imgs/logo.svg" /></div>
         <div class="position">
             <i class="fa fa-map-marker fa-2x"></i>
-            <span class="location">当前位置:&nbsp;&nbsp;&nbsp;&nbsp;广州
+            <span class="location">当前位置:&nbsp;&nbsp;广州
                 <div class="city_list">
                     <div class="jt"></div>
                     <div class="city_content">
