--- a/thinkcmf-5.0.180626/public/themes/RY/icr/teachers.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/teachers.html
@@ -19,12 +19,12 @@
             </div>
             <div class="clear"></div>
             <div class="teacher-list">
-                <div class="teacher-item"><div class="img"><img src="<?=$teacher[0]['icon']?>" /></div><div class="info"><div class="name"><?=$teacher[0]['name']?></div><div class="title"><?=$teacher[0]['position']?></div></div></div>
-                <div class="teacher-item"><div class="img"><img src="<?=$teacher[1]['icon']?>" /></div><div class="info"><div class="name"><?=$teacher[1]['name']?></div><div class="title"><?=$teacher[1]['position']?></div></div></div>
-                <div class="teacher-item"><div class="img"><img src="<?=$teacher[2]['icon']?>" /></div><div class="info"><div class="name"><?=$teacher[2]['name']?></div><div class="title"><?=$teacher[2]['position']?></div></div></div>
-                <div class="teacher-item"><div class="img"><img src="<?=$teacher[3]['icon']?>" /></div><div class="info"><div class="name"><?=$teacher[3]['name']?></div><div class="title"><?=$teacher[3]['position']?></div></div></div>
-                <div class="teacher-item"><div class="img"><img src="<?=$teacher[4]['icon']?>" /></div><div class="info"><div class="name"><?=$teacher[4]['name']?></div><div class="title"><?=$teacher[4]['position']?></div></div></div>
-                <div class="teacher-item"><div class="img"><img src="<?=$teacher[5]['icon']?>" /></div><div class="info"><div class="name"><?=$teacher[5]['name']?></div><div class="title"><?=$teacher[5]['position']?></div></div></div>
+                <div class="teacher-item"><div class="img"><img src="<?=$teacher[0]['icon']?>" /></div><div class="info"data-content="<?=$teacher[0]['resume']?>" data-idea ="<?=$teacher[0]['idea']?>" ><div class="name"><?=$teacher[0]['name']?></div><div class="title"><?=$teacher[0]['position']?></div></div></div>
+                <div class="teacher-item"><div class="img"><img src="<?=$teacher[1]['icon']?>" /></div><div class="info"data-content="<?=$teacher[1]['resume']?>" data-idea ="<?=$teacher[1]['idea']?>" ><div class="name"><?=$teacher[1]['name']?></div><div class="title"><?=$teacher[1]['position']?></div></div></div>
+                <div class="teacher-item"><div class="img"><img src="<?=$teacher[2]['icon']?>" /></div><div class="info"data-content="<?=$teacher[2]['resume']?>" data-idea ="<?=$teacher[2]['idea']?>" ><div class="name"><?=$teacher[2]['name']?></div><div class="title"><?=$teacher[2]['position']?></div></div></div>
+                <div class="teacher-item"><div class="img"><img src="<?=$teacher[3]['icon']?>" /></div><div class="info" data-content="<?=$teacher[3]['resume']?>" data-idea ="<?=$teacher[3]['idea']?>" ><div class="name"><?=$teacher[3]['name']?></div><div class="title"><?=$teacher[3]['position']?></div></div></div>
+                <div class="teacher-item"><div class="img"><img src="<?=$teacher[4]['icon']?>" /></div><div class="info"data-content="<?=$teacher[4]['resume']?>" data-idea ="<?=$teacher[4]['idea']?>" ><div class="name"><?=$teacher[4]['name']?></div><div class="title"><?=$teacher[4]['position']?></div></div></div>
+                <div class="teacher-item"><div class="img"><img src="<?=$teacher[5]['icon']?>" /></div><div class="info"data-content="<?=$teacher[5]['resume']?>" data-idea ="<?=$teacher[5]['idea']?>" ><div class="name"><?=$teacher[5]['name']?></div><div class="title"><?=$teacher[5]['position']?></div></div></div>
                 <div class="clear"></div>
             </div>
             <div class="page">
