--- a/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
@@ -119,7 +119,7 @@
                 <div class="clear"></div>
             </div>
             <div class="row">
-                <div class="more">
+                <div class="more" style="visibility:hidden">
                     查看全部20个国家
                 </div>
             </div>
