--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -13,7 +13,7 @@
     <div class="img_an">
         <div class="an-margin">
             <php>$j=1;</php>
-            <slides id="'2'">
+            <slides id="'1'">
                 <div data-id="{$j}"  id="an-{$j}"></div>
                 <php>$j++;</php>
             </slides>
@@ -38,10 +38,10 @@
             从教育心理学出发，发挥每个孩子的想象，充满自信的学习阅读能拓展心灵，启发想象力，一生受益
         </div>
         <div class="count">
-            <img src="/themes/RY/icr/imgs/20.svg" />
-            <div class="img-hover"><img src="/themes/RY/icr/imgs/9.svg" /><div class="hover-img"><img src="/themes/RY/icr/imgs/mmexport.svg"/></div></div>
-            <img src="/themes/RY/icr/imgs/140.svg" />
-            <img src="/themes/RY/icr/imgs/18.svg" />
+            <div><img src="/themes/RY/icr/imgs/20.svg" /><span>培训超过25万优秀学员</span></div>
+            <div class="img-hover"><img src="/themes/RY/icr/imgs/9.svg" /><div class="hover-img"><img src="/themes/RY/icr/imgs/mmexport.svg"/></div><span>当前品牌覆盖9个国家</span></div>
+            <div><img src="/themes/RY/icr/imgs/140.svg" /><span>拥有140多间培训中心</span></div>
+            <div><img src="/themes/RY/icr/imgs/18.svg" /><span>研究专注英语教育18年</span></div>
         </div>
         <div class="understand">
                 <div class="circle"><i class="fa fa-play"></i></div>
@@ -74,29 +74,29 @@
         <div class="advantage">
             <h1>我们的专业优势</h1>
             <div class="adv-item">
-                <img src="/themes/RY/icr/imgs/adv-1-img.svg">
-                <p>ICR教育系统通过<br/>
-                        资深教育心理学专家<br/>
-                        研究长达15年
-                </p>
+                <div class="adv-item-img"><img src="/themes/RY/icr/imgs/adv-1-img.svg"></div>
+                <div class="adv-item-p">ICR教育系统通过<br/>
+                    资深教育心理学专家<br/>
+                    研究长达15年
+                </div>
             </div>
             <div class="adv-item">
-                <img src="/themes/RY/icr/imgs/adv-2-img.svg">
-                <p>我们的教材从
+                <div class="adv-item-img"><img src="/themes/RY/icr/imgs/adv-2-img.svg"></div>
+                <div class="adv-item-p">我们的教材从
                     语言学、文学、心理学
                     多方便精心设计
-                </p>
+                </div>
             </div>
             <div class="adv-item">
-                <img src="/themes/RY/icr/imgs/adv-3-img.svg">
-                <p>严格考核筛选的教学名师资源，为课堂质量保驾护航
-                </p>
+                <div class="adv-item-img"><img src="/themes/RY/icr/imgs/adv-3-img.svg"></div>
+                <div class="adv-item-p">严格考核筛选的教学名师资源，为课堂质量保驾护航
+                </div>
             </div>
             <div class="adv-item">
-                <img src="/themes/RY/icr/imgs/adv-4-img.svg">
-                <p>小班教学不超过8人
+                <div class="adv-item-img"><img src="/themes/RY/icr/imgs/adv-4-img.svg"></div>
+                <div class="adv-item-p">小班教学不超过8人
                     让每一个孩子都得到足够的关照
-                </p>
+                </div>
             </div>
         </div>
     </div>
