--- a/thinkcmf-5.0.180626/public/themes/RY/icr/recruit.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/recruit.html
@@ -23,16 +23,6 @@
                     <div class="desc">
                         <div class="content">
                             <?=$brief_intro[0]?>
-                            <!--<p>教授I Can Read 读写课程</p>-->
-                            <!--<p> •	教授2.5-12岁儿童。</p>-->
-                            <!--<p> •	运用I Can Read?学习模式教授预读技巧。</p>-->
-                            <!--<p> •	运用I Can Read?学习模式教授阅读理解技巧。</p>-->
-                            <!--<p> •	教授写作技巧，包括语法、包括语法，改错和写作类型。</p>-->
-                            <!--<p> •	教授口语表达和沟通技巧。</p>-->
-                            <!--<p> •	帮助学生提升社交能力，并养成良好的课堂习惯。</p>-->
-                            <!--<p> 评估测验</p>-->
-                            <!--<p>•	为入学新生展开入学评估测验。</p>-->
-                            <!--<p> •	定期对学生课堂表现进行评估以掌握学生学…</p>-->
                         </div>
                     </div>
                 </div>
@@ -48,7 +38,16 @@
                     <div class="job-button"><input class="div-red" type="button" value="查看职位详情"
                                                    onclick="location='../icr/RecruitDetail?id={$recruit[1][\'id\']}'"/></div>
                 </div>
-                <div class="desc div-red"></div>
+                <div class="desc div-red">
+                    <div class="title">
+                        <div>职位描述</div>
+                    </div>
+                    <div class="desc">
+                        <div class="content">
+                            <?=$brief_intro[1]?>
+                        </div>
+                    </div>
+                </div>
                 <div class="arrow div-red"></div>
                 <div class="circle"></div>
             </div>
@@ -61,7 +60,16 @@
                     <div class="job-button"><input class="div-orange" type="button" value="查看职位详情"
                                                    onclick="location='../icr/RecruitDetail?id={$recruit[2][\'id\']}'"/></div>
                 </div>
-                <div class="desc div-orange"></div>
+                <div class="desc div-orange">
+                    <div class="title">
+                        <div>职位描述</div>
+                    </div>
+                    <div class="desc">
+                        <div class="content">
+                            <?=$brief_intro[2]?>
+                        </div>
+                    </div>
+                </div>
                 <div class="arrow div-orange"></div>
                 <div class="circle"></div>
             </div>
