--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/recruit/add.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/recruit/add.html
@@ -18,13 +18,13 @@
         <div class="form-group">
             <label class="col-sm-2 control-label"><span class="form-required">*</span>描述:</label>
             <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="desc" value="">
+                <textarea class="form-control" name="desc" rows="5" cols="57"></textarea>
             </div>
         </div>
         <div class="form-group">
-        <label class="col-sm-2 control-label"><span class="form-required">*</span>要求:</label>
+            <label class="col-sm-2 control-label"><span class="form-required">*</span>要求:</label>
             <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="require" value="">
+                <textarea class="form-control" name="require" rows="5" cols="57"></textarea>
             </div>
         </div>
 
