--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/recruit/edit.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/recruit/edit.html
@@ -24,13 +24,13 @@
         <div class="form-group">
             <label class="col-sm-2 control-label"><span class="form-required">*</span>描述:</label>
             <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="desc" value="{$desc}">
+                <textarea class="form-control" name="desc" rows="5" cols="57">{$desc}</textarea>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label"><span class="form-required">*</span>要求:</label>
             <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="require" value="{$require}">
+                <textarea class="form-control" name="require" rows="5" cols="57">{$require}</textarea>
             </div>
         </div>
 
