--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/course_level/index.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/course_level/index.html
@@ -12,7 +12,6 @@
             <tr>
                 <th width="50">ID</th>
                 <th width="70">一类等级</th>
-                <th width="150">课程目标</th>
             </tr>
             </thead>
             <tbody>
@@ -20,9 +19,8 @@
             <tr>
                 <td>{$vo.id}</td>
                 <td>{$vo.name}</td>
-                <td>{$vo.goal}</td>
                 <td width="140">
-                    <a href="javascript:parent.openIframeLayer('{:url('CourseLevel/editLevels',array('category_id'=>$vo['id']))}','{$vo.name}二类等级管理');">二类等级管理</a>
+                    <a href="{:url('CourseLevel/editLevels',array('category_id'=>$vo['id']))}">二类等级管理</a>
                     <a href="{:url('CourseLevel/edit',array('category_id'=>$vo['id']))}">{:lang('EDIT')}</a>
                 </td>
             </tr>
