--- a/thinkcmf-5.0.180626/public/themes/RY/icr/recruit.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/recruit.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="job-info"><?=$recruit[0]['position']?></div>
                     <div class="job-button"><input class="div-blue" type="button" value="查看职位详情"
-                                                   onclick="location='../icr/RecruitDetail?id={$recruit[0][\'id\']}'"/></div>
+                                                   onclick="location='../icr/recruit_detail?id={$recruit[0][\'id\']}'"/></div>
                 </div>
                 <div class="desc div-blue">
                     <div class="title">
@@ -36,7 +36,7 @@
                     </div>
                     <div class="job-info"><?=$recruit[1]['position']?></div>
                     <div class="job-button"><input class="div-red" type="button" value="查看职位详情"
-                                                   onclick="location='../icr/RecruitDetail?id={$recruit[1][\'id\']}'"/></div>
+                                                   onclick="location='../icr/recruit_detail?id={$recruit[1][\'id\']}'"/></div>
                 </div>
                 <div class="desc div-red">
                     <div class="title">
@@ -58,7 +58,7 @@
                     </div>
                     <div class="job-info"><?=$recruit[2]['position']?></div>
                     <div class="job-button"><input class="div-orange" type="button" value="查看职位详情"
-                                                   onclick="location='../icr/RecruitDetail?id={$recruit[2][\'id\']}'"/></div>
+                                                   onclick="location='../icr/recruit_detail?id={$recruit[2][\'id\']}'"/></div>
                 </div>
                 <div class="desc div-orange">
                     <div class="title">
