--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -156,7 +156,29 @@
     </div>
 </div>
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=s0x1Cj9VeZ6bVRI249olQM0V"></script>
-
+<script type="text/javascript">
+    var popup_html="<div id='popup' class='popup'>" +
+        "<div class='wd'>" +
+        "<div class='wd-title'>免费预约试听</div>" +
+        "<div class='wd-title2'>思明中心：厦门市思明区莲前西路2号莲富大厦3H</div>" +
+        "<form>" +
+        "<div class='input-text'>" +
+        "<div class='course-level'>" +
+        "<select>" +
+        "<option  hidden selected>预约试听课程级别</option>" +
+        "<option>课程一</option>" +
+        "<option>课程一</option>" +
+        "<option>课程一</option>" +
+        "</select>" +
+        "<i class='fa fa-caret-down fa-2x'></i></div>"+
+        "<input type='text' placeholder='输入手机号预约课程试听' />" +
+        "<input type='submit' value='确认预约试听'>" +
+        "</div>" +
+        "</form>" +
+        "<div class='cease'>&times;</div>" +
+        "</div>" +
+        "</div>";
+</script>
 <include file="../public/themes/RY/icr/foot.html" />
 <script type="text/javascript">
     // 百度地图API功能
