--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -105,11 +105,30 @@
             <h1>实测孩子英语水平</h1>
             <div class="test-form">
                 <form>
-                    <volist name="question_list" id="vo">
-                        <div class="input">
-                            <input placeholder={$vo.question} />
-                        </div>
-                    </volist>
+                    <div class="input">
+                        <select>
+                            <option hidden selected>问题1？</option>
+                            <option>答案4</option>
+                            <option>答案3</option>
+                            <option>答案2</option>
+                        </select>
+                    </div>
+                    <div class="input">
+                        <select>
+                            <option hidden selected>问题1？</option>
+                            <option>答案4</option>
+                            <option>答案3</option>
+                            <option>答案2</option>
+                        </select>
+                    </div>
+                    <div class="input">
+                        <select>
+                            <option hidden selected>问题1？</option>
+                            <option>答案4</option>
+                            <option>答案3</option>
+                            <option>答案2</option>
+                        </select>
+                    </div>
                     <div class="submit">
                         <input type="text" id="phone" placeholder="请输入您的手机号" />
                         <input type="submit" id="yy_submit" value="预约免费测试">
