--- a/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
@@ -119,22 +119,22 @@
                     <div class="radios-item">
                         <div class="img"><img src=<?=$feedback_video[0]['icon']?> /></div>
                         <div class="title"><?=$feedback_video[0]['title']?></div>
-                        <div class="click"><i class="fa fa-play-circle-o"></i></div>
+                        <div class="click" data-video="http://promotion.geely.com/xindihao/media/video1.mp4"><i class="fa fa-play-circle-o"></i></div>
                     </div>
                     <div class="radios-item">
                         <div class="img"><img src="<?=$feedback_video[1]['icon']?>" /></div>
                         <div class="title"><?=$feedback_video[1]['title']?></div>
-                        <div class="click"><i class="fa fa-play-circle-o"></i></div>
+                        <div class="click" data-video="http://promotion.geely.com/xindihao/media/video1.mp4"><i class="fa fa-play-circle-o"></i></div>
                     </div>
                     <div class="radios-item">
                         <div class="img"><img src="<?=$feedback_video[2]['icon']?>" /></div>
                         <div class="title"><?=$feedback_video[2]['title']?></div>
-                        <a href=" http://promotion.geely.com/xindihao/media/video1.mp4" target="_blank" class="video_link"><div class="click"><i class="fa fa-play-circle-o"></i></div></a>
+                       <div class="click" data-video="http://promotion.geely.com/xindihao/media/video1.mp4"><i class="fa fa-play-circle-o"></i></div>
                     </div>
                     <div class="radios-item">
                         <div class="img"><img src="<?=$feedback_video[3]['icon']?>" /></div>
-                        <div class="title"><?=$feedback_video[3]['title']?></div>
-                        <div class="click"><i class="fa fa-play-circle-o"></i></div>
+                        <div class="title" ><?=$feedback_video[3]['title']?></div>
+                        <div class="click" data-video="http://promotion.geely.com/xindihao/media/video1.mp4"><i class="fa fa-play-circle-o"></i></div>
                     </div>
                 </div>
             </div>
@@ -179,6 +179,11 @@
         </div>
     </div>
 </div>
+<div class="video">
+    <video src="" controls="controls">
+        您的浏览器不支持 video 标签。
+    </video>
+</div>
 <include file="../public/themes/RY/icr/foot.html" />
 <script type="text/javascript">
     $(function () {
@@ -186,6 +191,10 @@
             // var selectOption = $('#selectOption option:selected');
             var level_id = $(this).find("option:checked").attr("id");
             location.href = "{:url('course/index')}?s_level=" + level_id;
+        })
+        $(".click").click(function(){
+            $(".video video").attr('scr',$(this).data('video'));
+            $(".video").show();
         })
     });
 </script>
